# mtech_task

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env  Makefile  pyproject.toml  setup.cfg
backend/docker/: .env  docker-compose.yml
backend/internal/app/: app.py
backend/internal/config/: database.py  settings.py
backend/internal/controller/http/: router.py
backend/internal/controller/http/v1/: __init__.py  health.py  logs.py
backend/internal/dto/: log.py
backend/internal/entity/: base.py  log.py  mixin.py
backend/internal/service/: log.py
backend/internal/usecase/utils/: __init__.py  response.py  response_schema.py
backend/migrations/: env.py
backend/migrations/versions/: 16ac519b3e1b_initial.py
backgorund/: .env  config.py  helpers.py  pyproject.toml
background/: Dockerfile  data_provider.py  helpers.py  main.py  pyproject.toml
client/: .env  config.py  generator.py  helpers.py  main.py  pyproject.toml  worker.py
