[tool.poetry]
name = "mtech-client"
version = "0.1.0"
description = "client stub for mtech_backend service"
authors = ["lokot0k"]
readme = "README.md"
packages = [{include = "mtech_client"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
